--- a/ojs/locale/sv_SE/locale.xml
+++ b/ojs/locale/sv_SE/locale.xml
@@ -39,7 +39,7 @@
 	<message key="manager.setup.doiSuffixPattern">Till exempel, vol 3, häfte 2, sidor 2-30 kan skapa en DOI som 10.1234/vol3iss2pp230</message>
 	<message key="manager.setup.doiSuffixPattern.example">Exempel</message>
 	<message key="manager.setup.doiSuffixDefault">Använd standardformat</message>
-	<message key="manager.setup.doiSuffixCustomIdentifier">Använd DOI suffix för publicerat material (måste vara aktiverat i Steg 4).</message>
+	<message key="manager.setup.doiSuffixPublisherId">Använd DOI suffix för publicerat material (måste vara aktiverat i Steg 4).</message>
 	<message key="manager.setup.doiSuffixDescription">Ett DOI suffix kan ha vilken form som helst men måste vara unikt för varje publicerad enhet. </message>
 	<message key="manager.setup.publisherNoteDescription">Texten kommer återfinnas nedanför rubriken 'Utgivare' och ovanför utgivarens namn/url under 'Sponsorer' på sidan Om.</message>
 	<message key="manager.setup.sponsorNoteDescription">Texten kommer återfinnas nedanför rubriken "Sponsorer" och ovanför  listan över sponsorers namn och urls under 'Sponsorer' på sidan Om.</message>
