--- a/ojs/locale/cs_CZ/manager.xml
+++ b/ojs/locale/cs_CZ/manager.xml
@@ -658,7 +658,7 @@
 	<message key="manager.setup.doiSuffixPattern">Použijte níže vložený vzorec pro generování DOI přípon. Použijte %j pro inciály časopisu, %v pro číslo ročníku, %i pro číslo čísla, %a pro ID OJS článku a %p pro číslo stránky.</message>
 	<message key="manager.setup.doiSuffixPattern.example">Například vol%viss%ipp%p by mohlo vytvořit DOI jako 10.1234/vol3iss2pp230</message>
 	<message key="manager.setup.doiSuffixDescription">DOI přípona může mít jakýkoliv formát, ale musí být jedinečná pro každou publikovanou položku.</message>
-	<message key="manager.setup.doiSuffixCustomIdentifier">Použít "Uživatelský identifikátor" pro publikované položky jako DOI příponu (musí být povoleno v Kroku 4).</message>
+	<message key="manager.setup.doiSuffixPublisherId">Použít "Uživatelský identifikátor" pro publikované položky jako DOI příponu (musí být povoleno v Kroku 4).</message>
 	<message key="manager.setup.form.doiPrefixPattern">DOI vzorec musí být ve formátu 10.xxxx.</message>
 	<message key="manager.setup.journalFaviconDescription">Přidat faviconu pro tento časopis, která se bude zobrazovat vedle navigační lišty, když uživatelé navštíví vaše stránky.</message>
 	<message key="manager.setup.publisherNoteDescription">Tento text se zobrazí pod hlavičkou "Vydavatel" a nad jménem/url vydavatele pod "Sponzorování časopisu" na stránce "O časopisu".</message>
