--- a/ojs/locale/pt_BR/manager.xml
+++ b/ojs/locale/pt_BR/manager.xml
@@ -630,7 +630,7 @@ Exemplo:
 	<message key="manager.setup.doiSuffixPattern">Use o padrão informado abaixo para gerar sufixos DOI. Use %j para iniciais da revista, %v para o volume, %i para a edição, %a para o código do artigo no sistema e %p para o número da página.</message>
 	<message key="manager.setup.doiSuffixPattern.example">Por exemplo, vl%viss%ipp%p poderia criar um DOI to tipo 10.1234/vol3iss2pp230</message>
 	<message key="manager.setup.doiSuffixDescription">Um sufixo DOI pode possuir qualquer formato, desde que seja único para cada item publicado.</message>
-	<message key="manager.setup.doiSuffixCustomIdentifier">Usar o "Identificador personalizado" para itens publicados como sufixo DOI (deve estar habilitado no Passo 4).</message>
+	<message key="manager.setup.doiSuffixPublisherId">Usar o "Identificador personalizado" para itens publicados como sufixo DOI (deve estar habilitado no Passo 4).</message>
 	<message key="manager.setup.form.doiPrefixPattern">O padrão DOI deve estar no formato 10.xxxx.</message>
 	<message key="manager.setup.journalFavicon">Ícone de favoritos</message>
 	<message key="manager.setup.journalFaviconDescription">Incluir um ícone de favoritos (favicon) da revista, a ser exibido na barra de endereço do navegador.</message>
