--- a/ojs/locale/en_US/manager.xml
+++ b/ojs/locale/en_US/manager.xml
@@ -254,19 +254,23 @@
 	<message key="manager.setup.enableSuppFileDoi">Supplementary Files</message>
 	<message key="manager.setup.explainDois">Please select the publishing objects that will have Digital Object Identifiers (DOI) assigned:</message>
 	<message key="manager.setup.doiPrefix">DOI Prefix</message>
-	<message key="manager.setup.doiPrefixDescription"><![CDATA[The DOI Prefix is assigned by <a href="http://www.crossref.org" target="_new">CrossRef</a> and is in the format 10.xxxx (e.g. 10.1234).]]></message>
+	<message key="manager.setup.doiPrefixDescription"><![CDATA[The DOI Prefix is assigned by registration agencies (e.g. <a href="http://www.crossref.org" target="_new">CrossRef</a>) and is in the format 10.xxxx (e.g. 10.1234).]]></message>
 	<message key="manager.setup.doiSuffix">DOI Suffix</message>
 	<message key="manager.setup.doiSuffixDefault">Use default patterns.</message>
 	<message key="manager.setup.doiSuffixDefault.description"><![CDATA[%j.v%vi%i for issues<br />%j.v%vi%i.%a for articles<br />%j.v%vi%i.%a.g%g for galleys <br />%j.v%vi%i.%a.g%g.s%s for supplementary files.]]></message>
-	<message key="manager.setup.doiSuffixPattern">Use the pattern entered below to generate URN suffixes. Use %j for journal initials, %v for the volume number, %i for the issue number, %Y for the year, %a for the OJS article ID, %g for the OJS galley ID, %s for the OJS supplementary file ID and %p for the page number.</message>
+	<message key="manager.setup.doiSuffixPattern">Use the pattern entered below to generate DOI suffixes. Use %j for journal initials, %v for the volume number, %i for the issue number, %Y for the year, %a for the OJS article ID, %g for the OJS galley ID, %s for the OJS supplementary file ID and %p for the page number.</message>
 	<message key="manager.setup.doiSuffixPattern.issues">for issues</message>
 	<message key="manager.setup.doiSuffixPattern.articles">for articles</message>
 	<message key="manager.setup.doiSuffixPattern.galleys">for galleys</message>
 	<message key="manager.setup.doiSuffixPattern.suppFiles">for supplementary files.</message>
+	<message key="manager.setup.form.doiIssueSuffixPatternRequired">Please enter the DOI suffix pattern for issues.</message>
+	<message key="manager.setup.form.doiArticleSuffixPatternRequired">Please enter the DOI suffix pattern for articles.</message>
+	<message key="manager.setup.form.doiGalleySuffixPatternRequired">Please enter the DOI suffix pattern for galleys.</message>
+	<message key="manager.setup.form.doiSuppFileSuffixPatternRequired">Please enter the DOI suffix pattern for supplementary files.</message>
 	<message key="manager.setup.doiSuffixPattern.example">For example, vol%viss%ipp%p could create a DOI such as 10.1234/vol3iss2pp230</message>
-	<message key="manager.setup.doiSuffixDescription">A DOI suffix can take any form, but must be unique for each published item.</message>
+	<message key="manager.setup.doiSuffixDescription">A DOI suffix can take any form, but must be unique among all publishing objects with the same DOI prefix assigned.</message>
 	<message key="manager.setup.doiSuffixPublisherId">Use the "Custom Identifier" for published items as the DOI suffix (must be enabled in Step 4). This is the same identifier that will be used for public URLs.</message>
-	<message key="manager.setup.doiSuffixCustomIdentifier">Enter an individual DOI suffix for each published item independent from the URL. You'll find a DOI input field on each item's meta-data page.</message>
+	<message key="manager.setup.doiSuffixCustomIdentifier">Enter an individual DOI suffix for each published item independent and different from the "Custom Identifier" mentioned in the previous option. You'll find an additional DOI input field on each item's meta-data page.</message>
 	<message key="manager.setup.doiSuffixCustomIdentifierNotUnique">The given DOI suffix is already in use for another published item. Please enter a unique DOI suffix for each item.</message>
 	<message key="manager.setup.doiReassign">Reassign DOIs</message>
 	<message key="manager.setup.doiReassign.description">If you change your DOI configuration, DOIs that have already been assigned will not be affected. Once the DOI configuration is saved, use this button to clear all existing DOIs so that the new settings will take effect with existing articles.</message>
