[ap5 DOIs for issues, galleys and supp files] DOI, settings and display for issues, galleys and supp files including Gherkin spec and a full set of acceptance tests.

--- a/ojs/locale/en_US/manager.xml
+++ b/ojs/locale/en_US/manager.xml
@@ -247,11 +247,22 @@
 	<message key="manager.setup.disciplineProvideExamples">Provide examples of relevant academic disciplines for this journal</message>
 	<message key="manager.setup.displayCurrentIssue">Add the table of contents for the current issue (if available).</message>
 	<message key="manager.setup.doi">DOI</message>
+	<message key="manager.setup.doiObjects">Assign DOIs to...</message>
+	<message key="manager.setup.enableIssueDoi">Issues</message>
+	<message key="manager.setup.enableArticleDoi">Articles</message>
+	<message key="manager.setup.enableGalleyDoi">Galleys</message>
+	<message key="manager.setup.enableSuppFileDoi">Supplementary Files</message>
+	<message key="manager.setup.explainDois">Please select the publishing objects that will have Digital Object Identifiers (DOI) assigned:</message>
 	<message key="manager.setup.doiPrefix">DOI Prefix</message>
-	<message key="manager.setup.doiPrefixDescription"><![CDATA[The DOI (Digital Object Identifier) Prefix is assigned by <a href="http://www.crossref.org" target="_new">CrossRef</a> and is in the format 10.xxxx (e.g. 10.1234).]]></message>
+	<message key="manager.setup.doiPrefixDescription"><![CDATA[The DOI Prefix is assigned by <a href="http://www.crossref.org" target="_new">CrossRef</a> and is in the format 10.xxxx (e.g. 10.1234).]]></message>
 	<message key="manager.setup.doiSuffix">DOI Suffix</message>
-	<message key="manager.setup.doiSuffixDefault">Use default pattern (%j.v%vi%i.%a).</message>
-	<message key="manager.setup.doiSuffixPattern">Use the pattern entered below to generate DOI suffixes.  Use %j for journal initials, %v for the volume number, %i for the issue number, %Y for the year, %a for the OJS article ID, and %p for the page number.</message>
+	<message key="manager.setup.doiSuffixDefault">Use default patterns.</message>
+	<message key="manager.setup.doiSuffixDefault.description"><![CDATA[%j.v%vi%i for issues<br />%j.v%vi%i.%a for articles<br />%j.v%vi%i.%a.g%g for galleys <br />%j.v%vi%i.%a.g%g.s%s for supplementary files.]]></message>
+	<message key="manager.setup.doiSuffixPattern">Use the pattern entered below to generate URN suffixes. Use %j for journal initials, %v for the volume number, %i for the issue number, %Y for the year, %a for the OJS article ID, %g for the OJS galley ID, %s for the OJS supplementary file ID and %p for the page number.</message>
+	<message key="manager.setup.doiSuffixPattern.issues">for issues</message>
+	<message key="manager.setup.doiSuffixPattern.articles">for articles</message>
+	<message key="manager.setup.doiSuffixPattern.galleys">for galleys</message>
+	<message key="manager.setup.doiSuffixPattern.suppFiles">for supplementary files.</message>
 	<message key="manager.setup.doiSuffixPattern.example">For example, vol%viss%ipp%p could create a DOI such as 10.1234/vol3iss2pp230</message>
 	<message key="manager.setup.doiSuffixDescription">A DOI suffix can take any form, but must be unique for each published item.</message>
 	<message key="manager.setup.doiSuffixPublisherId">Use the "Custom Identifier" for published items as the DOI suffix (must be enabled in Step 4). This is the same identifier that will be used for public URLs.</message>
@@ -259,6 +270,11 @@
 	<message key="manager.setup.doiSuffixCustomIdentifierNotUnique">The given DOI suffix is already in use for another published item. Please enter a unique DOI suffix for each item.</message>
 	<message key="manager.setup.doiReassign">Reassign DOIs</message>
 	<message key="manager.setup.doiReassign.description">If you change your DOI configuration, DOIs that have already been assigned will not be affected. Once the DOI configuration is saved, use this button to clear all existing DOIs so that the new settings will take effect with existing articles.</message>
+	<message key="manager.setup.doiNotYetGenerated">A DOI has not yet been generated. Publishing the issue and viewing the public {$objectType} page will automatically generate a unique DOI for this {$objectType}.</message>
+	<message key="manager.setup.doiObjectTypeIssue">issue</message>
+	<message key="manager.setup.doiObjectTypeArticle">article</message>
+	<message key="manager.setup.doiObjectTypeGalley">galley</message>
+	<message key="manager.setup.doiObjectTypeSuppFile">supplementary file</message>
 	<message key="manager.setup.editorDecision">Editor Decision</message>
 	<message key="manager.setup.editorialMembers">Go to Board Members and add Editorial Board and/or Review Board members. This can be done at any point in operating the journal.</message>
 	<message key="manager.setup.editorialProcess1">One or more editors handle the basic steps without designated roles.</message>
