--- a/ojs/plugins/importexport/datacite/locale/en_US/locale.xml
+++ b/ojs/plugins/importexport/datacite/locale/en_US/locale.xml
@@ -14,12 +14,22 @@
 	<message key="plugins.importexport.datacite.displayName">DataCite Export/Registration Plugin</message>
 	<message key="plugins.importexport.datacite.description">Export or register issue, article, galley and supplementary file metadata in DataCite format.</message>
 
+	<message key="plugins.importexport.datacite.intro"><![CDATA[
+		If you want to register DOIs with DataCite, please contact our Managing
+		Agent via the <a href="http://datacite.org/contact">DataCite homepage</a>, who will
+		refer you to your local DataCite Member. Once you have established a
+		relationship with the Member organisation, you will be provided with access
+		to the DataCite service for minting persistent identifiers (DOIs) and
+		registering associated metadata.
+	]]></message>
+
 	<message key="plugins.importexport.datacite.settings.description"><![CDATA[Please <a href="{$settingsUrl}">configure</a> the DataCite export plug-in before using it for the first time.]]></message>
  
 	<message key="plugins.importexport.datacite.settings.form.description">Please configure the DataCite export plug-in:</message>
 	<message key="plugins.importexport.datacite.settings.form.symbol">Username (symbol)</message>
+	<message key="plugins.importexport.datacite.settings.form.symbolRequired">Please enter the username (symbol) you got from DataCite. The username may not contain colons.</message>
 	<message key="plugins.importexport.datacite.settings.form.password">Password</message>
-	<message key="plugins.importexport.datacite.settings.form.passwordInstruction">Persons who have access to your database or database backup will be able to read your password. If you are not sure that your password can be safely stored in the database then please leave the password field empty. In that case you'll be asked to enter your password whenever you access the DataCite server.</message>
+	<message key="plugins.importexport.datacite.settings.form.passwordRequired">Please enter your DataCite password.</message>
  
 	<message key="plugins.importexport.datacite.export.suppFiles">Export specific supplementary files</message>
 	<message key="plugins.importexport.datacite.export.selectSuppFile">Select Supplementary Files</message>
